# bee

./: CMakeLists.txt
include/: hex.h  params.h  render_hex.h  ui.h
src/app/: app.c
src/config/: params.c
src/render/: gl_backend.c  hex_draw.c  hex_draw.h
src/ui/: ui.c
src/world/: hex_world.c
